# skillbank-agent

./: .gitignore  =8.1.0  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
src/skillbank/: __main__.py  cli.py  skill_bank.py
tests/: test_scaffold.py  test_skill_bank.py
