[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillbank-agent"
version = "0.1.0"
description = "Accumulative LLM agent with a growing skill library"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.25.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.scripts]
skillbank = "skillbank.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
